# Academy-Course-DAT31071

./: CMakeLists.txt  README.md
exercises/step1/: eigen_version.cpp
exercises/step10/: double_contraction.cpp  tensor_chain.cpp  tensor_contraction.cpp
exercises/step11/: tensor_reductions.cpp  tensor_trace.cpp
exercises/step12/: tensor_broadcast.cpp  tensor_chip.cpp  tensor_concatenate.cpp  tensor_extract.cpp  tensor_pad.cpp  tensor_reverse.cpp  tensor_shuffle.cpp  tensor_slice.cpp  tensor_stride.cpp
exercises/step13/: tensor_cumprod.cpp  tensor_cumsum.cpp
exercises/step2/: element_access.cpp  tensor_classes.cpp  tensor_dimensions.cpp
exercises/step3/: initialization_set.cpp  raw_data_init.cpp  symmetries.cpp  tensor_setting.cpp
exercises/step4/: tensor_accessing.cpp  tensor_print.cpp  tensor_reshape.cpp
exercises/step5/: tensor_arithmetic.cpp  tensor_casting.cpp  tensor_resizing.cpp
exercises/step6/: custom_generators.cpp  fixing_seed.cpp  random_numbers.cpp
exercises/step7/: argmax.cpp  check_operations.cpp  minus_sign.cpp  unary_operations.cpp
exercises/step8/: logical_operations.cpp  logical_reductions.cpp  tensor_addition.cpp  tensor_selections.cpp
